@@ -28,13 +28,16 @@
  *  SUCH DAMAGE.
  *
  *
- *  $Id: arm_cpu_types.h,v 1.11.2.1 2008-01-18 19:12:31 debug Exp $
+ *  $Id: arm_cpu_types.h,v 1.11.2.2 2008-06-09 14:25:57 debug Exp $
  */
 
 /*  See cpu_arm.h for struct arm_cpu_type_def.  */
 /*  See armreg.h for CPU_ID_xxx defines.  */
 
 /*  TODO: Refactor these flags  */
+
+/*  TODO: Include "ARM level", i.e. ARMv5  */
+
 
 /*  Flags:  */
 #define	ARM_NO_MMU		1
